# 420proje

./: README.md  main.py  pyproject.toml
backend/: audio_handler.py  file_handler.py  image_handler.py  stegano_backend.py  steganography_backend.py
frontend/: EncryptionOptionsPage.py  FinishPage.py  RevealPage.py  concealPageStep1.py  mainApp.py  revealPageStep1.py  startPage.py
personalTest/: compare.py  deneme.txt  deneme1.txt  test.py  test1.py
venvForStega/: pyvenv.cfg
venvForStega/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
